--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="home-container">
         <div class="hero-image">
-            <img src="file:///C:/Users/Admin/Desktop/23510060/images/platform.jpg" alt="Ticketing Platform">
+            <img src="Ticket-master/platform.jpg" alt="Ticketing Platform">
         </div>
         <div class="home-text">
             <h2>Welcome to TicketMaster</h2>
