--- a/movies.html
+++ b/movies.html
@@ -27,15 +27,15 @@
     <div class="movies-container">
         <h2>Our Movies & Concerts</h2>
         <div class="movie-item" onclick="showDetails('movie1')">
-            <img src="file:///C:/Users/Admin/Desktop/23510060/images/movie1.jpg" alt="Movie Poster 1">
+            <img src="Ticket-master/movie1.jpg" alt="Movie Poster 1">
             <h3>Harry Potter and the Half Blood Prince</h3>
         </div>
         <div class="movie-item" onclick="showDetails('movie2')">
-            <img src="file:///C:/Users/Admin/Desktop/23510060/images/movie2.jpg" alt="Movie Poster 2">
+            <img src="Ticket-master/movie2.jpg" alt="Movie Poster 2">
             <h3>Harry Potter and the Chamber of secrets</h3>
         </div>
         <div class="movie-item" onclick="showDetails('concert1')">
-            <img src="file:///C:/Users/Admin/Desktop/23510060/images/Concert Image.jpg" alt="Concert Image">
+            <img src="Ticket-master/Concert Image.jpg" alt="Concert Image">
             <h3>Harry Styles Concert</h3>
         </div>
     </div>
