--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
     <div class="about-container">
         <h2>About TicketMaster</h2>
-        <img src="file:///C:/Users/Admin/Desktop/23510060/images/platform.jpg" alt="Ticketing Platform">
+        <img src="Ticket-master/platform.jpg" alt="Ticketing Platform">
         <p>We are a leading online ticketing platform that allows you to buy tickets for various events including movies, concerts, theater shows, and more.</p>
         <p>Our mission is to provide a seamless and easy-to-use platform for booking tickets at your convenience. We partner with top event organizers to ensure the best experience for our customers.</p>
     </div>
